--- a/procimap.rc
+++ b/procimap.rc
@@ -2,17 +2,13 @@
 # - usually to be installed in something like /usr/share/lib/procimap.rc
 #
 # era Wed Dec 21 07:37:03 2005
-# $Id: procimap.rc,v 1.1 2005-12-21 16:53:05 era Exp $
+# $Id: procimap.rc,v 1.2 2005-12-21 16:53:58 era Exp $
 
 SHELL=/bin/sh
 DEFAULT='|'
 
 
-:0
-* ! PROCIMAPRC ?? .
-{ PROCIMAPRC=$HOME/.procimaprc }
-
-INCLUDERC=$PROCIMAPRC
+INCLUDERC=${PROCIMAPRC:-$HOME/.procimaprc}
 
 
 :0f
