--- a/procimap.rc
+++ b/procimap.rc
@@ -2,7 +2,7 @@
 # - usually to be installed in something like /usr/share/lib/procimap.rc
 #
 # era Wed Dec 21 07:37:03 2005
-# $Id: procimap.rc,v 1.5 2006-01-02 14:36:03 era Exp $
+# $Id: procimap.rc,v 1.6 2006-01-02 14:39:45 era Exp $
 
 SHELL=/bin/sh
 DEFAULT='|'
@@ -12,7 +12,11 @@ RESULT=
 
 INCLUDERC=${PROCIMAPRC:-procimaprc}
 
+:0
+* ! RESULT ?? .
+{ RESULT=default }
 
-:0f
-* ! ^^X-ProcIMAP:[ 	]*\/.*
-| echo X-ProcIMAP: default; cat
+#:0fhw
+#* ! ^^X-ProcIMAP:[ 	]*\/.*
+:0fhw
+| echo X-ProcIMAP: "$RESULT"; cat
