--- a/procimap.rc
+++ b/procimap.rc
@@ -2,10 +2,11 @@
 # - usually to be installed in something like /usr/share/lib/procimap.rc
 #
 # era Wed Dec 21 07:37:03 2005
-# $Id: procimap.rc,v 1.6 2006-01-02 14:39:45 era Exp $
+# $Id: procimap.rc,v 1.7 2006-01-02 14:46:40 era Exp $
 
 SHELL=/bin/sh
 DEFAULT='|'
+LOGABSTRACT=no
 
 
 RESULT=
