--- a/procimap.rc
+++ b/procimap.rc
@@ -2,25 +2,39 @@
 # - usually to be installed in something like /usr/share/lib/procimap.rc
 #
 # era Wed Dec 21 07:37:03 2005
-# $Id: procimap.rc,v 1.8 2006-01-02 14:55:45 era Exp $
+# $Id: procimap.rc,v 1.9 2006-01-12 17:32:02 era Exp $
 
 SHELL=/bin/sh
 DEFAULT='|'
 LOGABSTRACT=no
 
-TRAP="echo '$_: procmail delivered message prematurely' >&2; exit 2"
+NL="
+"
+
+PROCIMAP_TRAP_ORIG=$TRAP
+PROCIMAP_TRAP='echo "$_: procmail delivered message prematurely" >&2'
+PROCIMAP_TRAP_EXITCODE=2
+TRAP="$PROCIMAP_TRAP; $PROCIMAP_TRAP_ORIG; exit $PROCIMAP_TRAP_EXITCODE"
+
+# Gack, simulate output from Perl's localtime -- %c without a time zone
+######## BUG: no SHELLMETAS check on $var in backticks `$var`
+# -- need eval +and+ the semicolon to trigger SHELLMETAS
+######## TODO: submit bug report for procmail
+PROCIMAP_LOGDATE='eval date +"%a %b %_d %T %Y"'
+LOG=${PROCIMAP_VERBOSE:+${PROCIMAP_MID:+\
+`$PROCIMAP_LOGDATE;`" - $_ [$$] processing message $PROCIMAP_MID$NL"}}
 
 RESULT=
 
+LOG=${PROCIMAP_VERBOSE:+\
+`$PROCIMAP_LOGDATE;`" - $_ [$$] invoking ${PROCIMAPRC-procimaprc}$NL"}
 INCLUDERC=${PROCIMAPRC:-procimaprc}
 
-TRAP=
+TRAP=$PROCIMAP_TRAP_ORIG
+RESULT=${RESULT:-default}
 
-:0
-* ! RESULT ?? .
-{ RESULT=default }
+LOG=${PROCIMAP_VERBOSE:+\
+`$PROCIMAP_LOGDATE;`" - $_ [$$] result: $RESULT$NL"}
 
-#:0fhw
-#* ! ^^X-ProcIMAP:[ 	]*\/.*
 :0fhw
 | echo X-ProcIMAP: "$RESULT"; cat
