Finish Debianization for 0.05-cvs20100202 build - debian/rules, dirs, compat: lost or missing from original 0.03 dh_make (!) - GNUmakefile: allow debuild to work out of the box; introduce DEST.WRAPPER - Makefile.conf: use @@build.pl> addressing syntax; introduce DEST.WRAPPER - build.pl: options handling was broken / weird; prevented from working - debian/changelog: add entry for 0.05-cvs20100202 - debian/control: minor errors from old dh_make

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -3,12 +3,16 @@
 #
 # Caution: build.pl will overwrite this file from Makefile.conf.in
 
-######## FIXME: ugly kludge to prevent trailing spaces in values before comment
-BASEDIR:=usr# 				# @@build.pl#s/=[^ 	]*/=$basedir/@@
-SHAREDIR:=/share#			# @@build.pl#s/=[^ 	]*/=$share/@@
+# @@build.pl>s/^BASEDIR:=.*/BASEDIR:=$basedir/@@
+BASEDIR:=/usr/local
+# @@build.pl>s/^SHAREDIR:=.*/SHAREDIR:=$share/@@
+SHAREDIR:=/share
 BASE:=$(DESTDIR)/$(BASEDIR)
 DESTDIR.BIN:=$(BASE)/bin
 DESTDIR.MAN:=$(BASE)$(SHAREDIR)/man
 DESTDIR.MAN1:=$(DESTDIR.MAN)/man1
-DESTDIR.LIB:=/usr/share/lib/procimap.rc	# @@build.pl#s/=[^ 	]*/=$wrapper/@@
+######## FIXME: this is broken!  need to update build.pl
+DESTDIR.LIB:=$(BASE)$(SHAREDIR)/lib
+# @@build.pl>s%^DEST\.WRAPPER:=.*%DEST.WRAPPER:=$(DESTDIR)$wrapper%@@
+DEST.WRAPPER:=$(DESTDIR)/lib/procimap.rc
 ######## TODO: VERSION=
