--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,7 @@ Package: procimap
 Priority: optional
 Architecture: all
 Depends: libmail-imapclient-perl
-Recommends: libmail-imapclient-perl (>>= 2.2.9+deb-3)
-Maintainer: era eriksson <era+debian@iki.fi>
+Recommends: libmail-imapclient-perl (>= 2.2.9+deb-3)
 Description: Run Procmail on an IMAP mailbox
  Procimap allows you to run local Procmail rules on a remote IMAP mailbox,
  with facilities for moving, copying, and deleting messages on the IMAP server.
