debian/rules; Default to group access OK
Debian and derived distros typically have group-per-user; so group access
should be secure, generally speaking

--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@
 build:
 	# in directory ..
 	-./build.pl --reverse
-	./build.pl --basedir=usr --wrapper=procimap/procimap.rc
+	./build.pl --groupaccess=1 --basedir=usr --wrapper=procimap/procimap.rc
 
 %:
 	dh  $@
