--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: required
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y devscripts   # provides: debuild
+  - gem install package_cloud
 # XXX TODO: if there is something which actually requires cpanm, revert this
 # (wrapped for legibility; maybe move to GNUMakefile if necessary)
 # install:
@@ -13,20 +14,10 @@ before_install:
 #           END { if (e==NR && n=e-1) exit(0); exit 1 }" "$1" ||
 #        { tail -n 10000 /dev/null "$1"; false; }' _ {} \;
 install: true
+env:
+  - secure: "RGrXObpI7D1pGIetoB6nB6mv7mxmOOWmjNv9u4sEMIh/ksyoqkLha1lMMEQdmxqojT61L8EmFm1iWjIoCSV68jNuU3d083Nq9Obbh9smwZ80S1KqszRaLIAPFuGQwLmn/ezHANh532AldydN6KKGBLQ2FhdMBEv+nTmqLS7gR/M="
 script:
-  - make deb
-deploy:
-  provider: packagecloud
-  username: tripleee
-  repository: procimap
-  token:
-    # sudo apt-get install ruby1.9.1-dev
-    # sudo gem install travis
-    # travis encrypt -r tripleee/procimap PACKAGECLOUD_TOKEN=abcdef...
-    secure: "RGrXObpI7D1pGIetoB6nB6mv7mxmOOWmjNv9u4sEMIh/ksyoqkLha1lMMEQdmxqojT61L8EmFm1iWjIoCSV68jNuU3d083Nq9Obbh9smwZ80S1KqszRaLIAPFuGQwLmn/ezHANh532AldydN6KKGBLQ2FhdMBEv+nTmqLS7gR/M="
-  dist: debian/squeeze
-  on:
-    all_branches: true
+  - make deb && package_cloud push tripleee/procimap/debian/squeeze procimap_*_all.deb
 notifications:
   email:
     - era+travis-procimap@iki.fi
